[gd_scene load_steps=3 format=2]

[ext_resource path="res://Sprite/catHead.png" type="Texture" id=1]
[ext_resource path="res://Script/CatchCounter.gd" type="Script" id=2]

[node name="CatchCounter" type="Node2D"]
script = ExtResource( 2 )

[node name="Head1" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="Head2" type="Sprite" parent="."]
position = Vector2( 50, 0 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="Head3" type="Sprite" parent="."]
position = Vector2( 100, 0 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )
